<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home"
             />
        <item
            android:id="@+id/nav_introdution"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_introduction" />
        <item
            android:id="@+id/nav_student"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_student" />
        <item
            android:id="@+id/nav_tutor"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tutor" />
        <item
            android:id="@+id/nav_listClass"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_listClass" />
        <item
            android:id="@+id/nav_fee"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_fee" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_login" />


    </group>

    <item android:title="Communicate">
        <menu>

        </menu>
    </item>

</menu>
