<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation1"
    app:startDestination="@+id/nav_student">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tutoringcenter.apptutor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_introdution"
        android:name="com.tutoringcenter.apptutor.ui.introduction.IntroductionFragment"
        android:label="@string/menu_introduction"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_student"
        android:name="com.tutoringcenter.apptutor.ui.student.Timkiem"
        android:label="@string/menu_student"
        tools:layout="@layout/fragment_student" />

    <fragment
        android:id="@+id/nav_tutor"
        android:name="com.tutoringcenter.apptutor.ui.tutor.TutorFragment"
        android:label="@string/menu_tutor"
        tools:layout="@layout/fragment_tutor" />

    <fragment
        android:id="@+id/nav_listClass"
        android:name="com.tutoringcenter.apptutor.ui.grade.GradeFragment"
        android:label="@string/menu_listClass"
        tools:layout="@layout/fragment_listclass" />

    <fragment
        android:id="@+id/nav_fee"
        android:name="com.tutoringcenter.apptutor.ui.fee.FeeFragment"
        android:label="@string/menu_fee"
        tools:layout="@layout/fragment_fee" />
</navigation>